# heart

./: .gitignore  .pre-commit-config.yaml  AGENTS.MD  AGENTS.md  Makefile  README.md  Tiltfile  pyproject.toml  semgrep.yml  sync.sh  test.py
.github/workflows/: ci.yml  (+1 more)
debugging/: read_switch.py
devlog/: 02.LinkThisLib.md  03.SetupRotaryEncoder.md  04.AutoBoot.md
docs/: AGENTS.md  README.md  beats-cube-renderer.md  beats-peripheral-snapshots.md  beats-websocket-protobuf.md  channel_diffusion.md  cli_structure.md  code_flow.md  color_conversion_tuning.md  compass_smoothing.md  dev_focus_loop.md  dev_session.md  developer_experience.md  device_display_resolution.md  dual_output_renderer.md  events_metrics.md  getting_started.md  hardware_debug_cli.md  logging_control.md  manage_update.md  markdown_style_guide.md  nautical_cloth_renderer.md  navigation_renderer_resolution.md  peripheral_configurations.md  pixel_model_renderer.md  pixel_sunrise_renderer.md  porthole_window_renderer.md  program_configuration.md  publish_pypi.md  reactivex_streams.md  reactivex_threads.md  reactivex_tuning.md  renderer_refactor_update.md  renderers_l_system_refactor.md  renderers_stateful_refactor.md  rendering_composition.md  runtime_feedback_loop.md  runtime_overview.md  rust_renderers.md  spritesheet_cache.md  (+5 more)
drivers/: AGENTS.md  README.md  rotary_encoder.py  update.py
experimental/circuit/: README.md  main.py  pyproject.toml
experimental/circuit/files/: copy_cad_files.sh
experimental/circuit/files/KiCad/: 74HCT245BQ_115.kicad_sym  LFE5U-45F-8BG381I.kicad_sym  SnapEDA-Library.kicad_sym
experimental/circuit/files/KiCad/Buffer.pretty/: 74HCT245BQ115.kicad_mod
experimental/circuit/files/KiCad/FPGA.pretty/: BGA381C80P20X20_1700X1700X176N.kicad_mod
experimental/circuit/files/KiCad/LFE5U-45F-8BG381I.pretty/: CABGA381_LAT-L.kicad_mod  CABGA381_LAT-M.kicad_mod  CABGA381_LAT.kicad_mod
experimental/circuit/files/KiCad/SnapEDA-Library.pretty/: BGA256C80P16X16_1400X1400X170.kicad_mod  BGA381C80P20X20_1700X1700X176N.kicad_mod  LCC20.kicad_mod  SSOP20.kicad_mod
experimental/circuit/src/circuit/: create_netlist.py
experimental/circuit/src/circuit/painter/: bga.py  board.py
experimental/circuit/src/tests/: test.py  test_footprint.py
experimental/isolated_rendering/: README.md  pyproject.toml
experimental/isolated_rendering/src/isolated_rendering/: __init__.py  buffer.py  cli.py  client.py  renderer.py  server.py  shared_memory.py
experimental/peripheral_sidecar/: README.md  pyproject.toml
experimental/peripheral_sidecar/src/peripheral_sidecar/: __init__.py  aggregators.py  config.py  models.py  mqtt_sidecar.py
keys/: rpi_common_ed25519  rpi_common_ed25519.pub
rust/heart_rgb_matrix_driver/: Cargo.toml  README.md  build.rs  pyproject.toml
rust/heart_rgb_matrix_driver/bench/: matrix_transfer.rs  pi5_pio_checkpoint_demo.rs  pi5_pio_hello.rs  pi5_pio_hub75_probe.rs  pi5_pio_sim_trace.rs  pi5_pio_smoke.rs  pi5_scan_bench.rs  pi5_scan_pio_audit.rs  pi5_scan_trace_diff.rs  piomatter_row_pattern_cost.rs
rust/heart_rgb_matrix_driver/native/: pi5_pio_hello_shim.c  pi5_pio_scan_shim.c  pi5_scan_loop_shim.c
rust/heart_rgb_matrix_driver/pio/: pi5_raw_byte_pull.pio  pi5_resident_parser.pio  pi5_simple_hub75.pio  piomatter_row_compact_engine_parity.pio  piomatter_row_compact_tight_engine_parity.pio  piomatter_row_counted_engine_parity.pio  piomatter_row_hybrid_engine_parity.pio  piomatter_row_repeat_engine_parity.pio  piomatter_row_runs_engine_parity.pio  piomatter_row_split_engine_parity.pio  piomatter_row_window_engine_parity.pio  piomatter_symbol_command_parity.pio  round_robin.pio
rust/heart_rgb_matrix_driver/python/heart_rgb_matrix_driver/: __init__.py  __init__.pyi  _heart_rust.pyi  matrix.py
rust/heart_rgb_matrix_driver/src/: lib.rs
rust/heart_rgb_matrix_driver/src/runtime/: backend.rs  config.rs  driver.rs  frame.rs  mod.rs  pi5_pinout.rs  pi5_pio_programs_generated.rs  pi5_pio_sim.rs  pi5_scan.rs  queue.rs  scene.rs  tests.rs  tuning.rs  worker.rs
rust/heart_rgb_matrix_driver/src/runtime/strategy/: mod.rs
rust/heart_rgb_matrix_driver/src/runtime/strategy/pi5_simple_scan/: experimental.rs  mod.rs  simple.rs  tests.rs  types.rs
rust/heart_rgb_matrix_driver/tools/: generate_pi5_pio_programs.py  generate_piomatter_compat_header.py  generate_piomatter_parity_header.py
rust/heart_rust/: Cargo.toml  README.md  build.rs  pyproject.toml
rust/heart_rust/bench/: matrix_transfer.rs  pi5_pio_bench.rs  pi5_scan_bench.rs
rust/heart_rust/kernel/pi5_scan_loop/: Makefile  dkms.conf  heart_pi5_scan_loop.c
rust/heart_rust/native/: pi5_pio_scan_shim.c  pi5_pio_shim.c  pi5_scan_loop_ioctl.h  pi5_scan_loop_shim.c
rust/heart_rust/python/heart_rust/: __init__.py  __init__.pyi  matrix.py
rust/heart_rust/src/: lib.rs
rust/heart_rust/src/runtime/: backend.rs  config.rs  device.rs  driver.rs  frame.rs  mod.rs  pi5_dma.rs  pi5_scan.rs  queue.rs  stats.rs  tests.rs  tuning.rs
scripts/: _test_accelerometer.py  _test_bluetooth_connect.py  _test_connect.py  benchmark_piomatter_row_repeat.py  bootstrap_native_runtime.sh  build_package.sh  build_profiles.json  check_harness.sh  check_peripherials.py  devex_focus.py  devex_session.py  devex_snapshot.py  generate_protobuf.py  harness_tools.txt  harness_utils.sh  hub75_color_cycle.py  hub75_gpio_smoke.py  hub75_gradient_cycle.py  hub75_single_line.py  ir_calibrate.py  list_harness_tools.sh  piomatter_rgb_cycle.py  prepare_piomatter_parity_checkout.py  publish_pypi.sh  render_code_flow.py  rp1_pio_ctl.c  run_piomatter_parity_cycle.py  run_piomatter_row_repeat_cycle.py  show_build_profile.sh  test_accelerometer.py  test_bluetooth_connect.py  test_gamepad_connect.py  test_phone_text.py  vibe.sh
src/: scan_ble_devices.py
test/: conftest.py  test_environment.py  test_environment_core_logic.py  test_peripheral_mqtt_integration.py
tests/: AGENTS.md  conftest.py  driver_loader.py  test_device_id.py  test_environment.py  test_environment_core_logic.py  test_identity.py  test_peripheral_mqtt_integration.py  test_virtual_feedback_flow.py
(+1295 files in other folders)
