[project]
name = "heart"
version = "0.2.0"
classifiers = [
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Music Lovers",
  "Intended Audience :: Artists",
  "Intended Audience :: Dancers",
  "Intended Audience :: Other Audience",
  "Environment :: MacOS X",
  "Environment :: Linux",
  "Environment :: Raspberry Pi",
  "Topic :: Software Development :: Libraries :: pygame",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
keywords = []
authors = []
requires-python = ">= 3.11"

dependencies = [
    "bleak",
    "numba",
    "numpy",
    "openant",
    "opencv-python",
    "Pillow",
    "pygame==2.6.1",
    "pyserial",
    "requests",
    "scipy",
    "toml",
    "tqdm",
    "typer-slim",
    "PyOpenGL>=3.1.0",
    "moderngl",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-benchmark",
    "scipy",
    "mypy",
    "types-requests",
    "types-toml",
    # Formatting
    "black",
    "docformatter[tomli]",
    "isort",
    "mdformat",
    "ruff",
    # Git
    "pre-commit",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
heart = ["*.png"]

[project.scripts]
totem = "heart.loop:main"
totem_debug = "heart.x.cli:main"

[tool.docformatter]
recursive = true
blank = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F403", "F405"]

[tool.ruff.lint.per-file-ignores]
"src/heart/display/shaders/shader.py" = ["F403", "F405"]
"src/heart/display/renderers/three_fractal.py" = ["F403", "F405"]

[tool.uv.workspace]
members = [
    "experimental/lapis",
    "experimental/circuit",
    "experimental/peripheral_sidecar",
    "experimental/isolated_rendering",
]

[tool.uv.sources]
heart = { workspace = true }

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = [
    "heart.device",
    "heart.environment",
    "heart.loop",
    "heart.peripheral",
    "heart.utilities",
]
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "bleak",
    "bleak.*",
    "cv2",
    "cv2.*",
    "moderngl",
    "numpy",
    "numpy.*",
    "openant",
    "openant.*",
    "PIL",
    "PIL.*",
    "pygame",
    "pygame.*",
    "requests",
    "rgbmatrix",
    "serial",
    "serial.*",
    "bluezero",
    "bluezero.*",
    "typer",
    "toml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "heart.assets",
    "heart.assets.*",
    "heart.display",
    "heart.display.*",
    "heart.navigation",
    "heart.navigation.*",
]
follow_imports = "skip"
