[project]
name = "circuit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "kipart",
    "kicost",
    "kinet2pcb",
    "matplotlib",
    "skidl",
    "pcbflow",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["circuit*"] 
exclude = ["tests*"]

[build-system]
requires      = ["setuptools>=70"]
build-backend = "setuptools.build_meta"