[project]
name = "isolated-rendering"
version = "0.1.0"
description = "High frequency renderer service for heart LED matrix output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer-slim",
    "heart @ file://../../",
]

[project.scripts]
isolated-render = "isolated_rendering.cli:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
