[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-peripheral-sidecar"
version = "0.1.0"
description = "Experimental MQTT sidecar for Heart peripherals"
authors = [{name = "Heart Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=1.6.1",
    "heart",
]

[project.scripts]
heart-peripheral-sidecar = "peripheral_sidecar.mqtt_sidecar:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
