[package]
name = "heart_rgb_matrix_driver"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "heart_rgb_matrix_driver"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-extension = ["pyo3/extension-module"]
stubgen = ["dep:pyo3-stub-gen"]

[dependencies]
heart_pio_sim = { path = "../heart_pio_sim" }
pyo3 = { version = "0.28.2", features = ["abi3-py311"] }
pyo3-stub-gen = { version = "0.15.0", optional = true }
rayon = "1.11.0"

[dev-dependencies]
criterion = "0.7.0"

[[bin]]
name = "pi5_scan_trace_diff"
path = "bench/pi5_scan_trace_diff.rs"

[[bin]]
name = "pi5_scan_pio_audit"
path = "bench/pi5_scan_pio_audit.rs"

[[bin]]
name = "pi5_pio_sim_trace"
path = "bench/pi5_pio_sim_trace.rs"

[[bin]]
name = "piomatter_row_pattern_cost"
path = "bench/piomatter_row_pattern_cost.rs"

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stubgen"]

[[bench]]
name = "matrix_transfer"
harness = false
path = "bench/matrix_transfer.rs"
