[package]
name = "heart_rgb_matrix_driver"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "heart_rgb_matrix_driver"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-extension = ["pyo3/extension-module"]
stubgen = ["dep:pyo3-stub-gen"]

[dependencies]
heart_pio_sim = { path = "../heart_pio_sim" }
libc = "0.2"
pyo3 = { version = "0.28.2", features = ["abi3-py311"] }
pyo3-stub-gen = { version = "0.15.0", optional = true }
rayon = "1.11.0"

[[bin]]
name = "pi5_round_robin_probe"
path = "src/bin/pi5_round_robin_probe.rs"

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stubgen"]
